# zurihac-2025

./: .gitignore  LICENSE  README.md  build.sh  flake.nix
.github/workflows/: build.yml
lesson1/: README.md  build.sh  cabal.project  index.html
lesson2/: .ghcid  README.md  build.sh  cabal.project  index.html  lesson2.cabal
lesson2/app/: Lesson2.hs
lesson3/: .ghcid  README.md  cabal.project  lesson3.cabal  test.sh
lesson3/test/: lesson3-js.hs  lesson3.hs
lesson4/: .ghcid  README.md  build.sh  cabal.project  index.html  lesson4.cabal  sw.js
lesson4/app/: Lesson4.hs
lesson5/: .ghcid  README.md  build.sh  cabal.project  index.html  lesson5.cabal
lesson5/app/: Lesson5.hs
slides/: build.sh  index.md
